# libart

./: .gitignore  CMakeLists.txt  LICENSE  run_all_tests.sh
.github/workflows/: ci.yml
cmake/: toolchain-mingw32.cmake  toolchain-mingw64.cmake
src/: CMakeLists.txt  art.c  art.h
tests/: CMakeLists.txt  runner.c  test_art.c
